fix: the blur z-index

--- a/src/pages/LockScreen/index.scss
+++ b/src/pages/LockScreen/index.scss
@@ -13,11 +13,7 @@
 .lockscreen[data-blur='true']::after {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+  inset: 0;
   backdrop-filter: blur(25px);
   background: rgba(0, 0, 0, 0.1);
 }
